fixt bugs in forecastBy-Tooltip, shiftedForecasts und fügt ein ScrollRestore in der Legende ein

--- a/src/app/components/forecast-plot/forecast-plot.component.scss
+++ b/src/app/components/forecast-plot/forecast-plot.component.scss
@@ -1,5 +1,6 @@
-.chart {
+::ng-deep .chart {
   min-height: 400px;
   height: 100%;
   max-height: 100%;
+  width: 100%;
 }
